Complete Binary Tree Visualizer: animation, zoom, pan, PNG export, README